[tool.poetry]
name = "pingpong"
version = "0.1.0"
description = ""
authors = ["Elisha Kravchuk <elisey.kravchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aioquic = "^0.9.20"
uvloop = "^0.17.0"
wsproto = "^1.2.0"
httpbin = "^0.7.0"
asgiref = "^3.6.0"
starlette = "^0.25.0"
werkzeug = {path = "werkzeug-2.0.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
